--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="author" content="Ruan Melo">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- <meta name="theme-color" content="#000000" /> -->
+  <meta name="description" content="Music Player created with React and SpotifyAPI" />
+  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Reactify</title>
 </head>
 
 <body>
